--- a/chandler/distrib/osx/bundle/release/Info.plist
+++ b/chandler/distrib/osx/bundle/release/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>release/RunChandler</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Chandler Milestone 0.3.20_A from the Open Source Applications Foundation</string>
+	<string>Chandler Milestone 0.3.21 from the Open Source Applications Foundation</string>
 	<key>CFBundleIconFile</key>
 	<string>Chandler.icns</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>CHAN</string>
 	<key>CFBundleVersion</key>
-	<string>0.3.20_A</string>
+	<string>0.3.21</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
