Get rid of the warning '[: Files/Microsoft: unknown operand' when you do make env on Windows. Need to quote the path because typically there are spaces in it.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2985 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -103,7 +103,7 @@ ifndef VS71COMNTOOLS
 	@echo VS71COMNTOOLS is not set, you do not have MSVC 7.1 installed
 	@false
 else
-	@if [ ! -d $(shell cygpath -u $$VS71COMNTOOLS) ]; then \
+	@if [ ! -d "$(shell cygpath -u $$VS71COMNTOOLS)" ]; then \
             echo VS71COMNTOOLS is not set properly; \
             false; \
         else \
