Bug 1679; new Twisted & ZopeInterface in external;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3000 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -1,5 +1,5 @@
 
-VERSION=0.3-10
+VERSION=0.3-11
 
 include Makefile.inc
 
@@ -17,6 +17,7 @@ SYSTEMS=persistence/db \
         egenix-mx \
         jabber-py \
         SOAPpy \
+        zope \
         twisted \
         pychecker
 
@@ -36,7 +37,8 @@ SOURCES=persistence/db/db-4.2.52.tar.gz \
         egenix-mx/egenix-mx-base-2.1.0.tar.gz \
         jabber-py/jabberpy0.4-0.tar.gz \
         SOAPpy/SOAPpy-0.10.2.tar.gz \
-        twisted/Twisted-1.3.0.tar.gz \
+        zope/ZopeInterface-3.0.0b1.tgz \
+        twisted/Twisted-r11108.tar.gz \
         pychecker/pychecker-0.8.13.tar.gz
 
 .PHONY: sources expand binaries $(SYSTEMS)
