Bug 1525;make clean fails in wxPython on Windows;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3017 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -44,7 +44,7 @@ wxPython:
 MANIFEST=$(SNAP)/$(SITE)/wx
 
 clean:
-	cd $(SRC); devenv.com build/msw/msw.sln /clean $(Snap)
+	cd $(SRC); MAKEFLAGS=; devenv.com build/msw/msw.sln /clean $(Snap)
 	cd $(SRC)/wxPython; rm -rf $(SRC)/wxPython/$(BUILD)
 
 else
