Bug 1704;unsatisfied link error with libdb_java42d.dll in Windows build;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3023 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/PyLucene/Makefile
+++ b/external/PyLucene/Makefile
@@ -7,11 +7,18 @@ include $(BUILD_ROOT)/Makefile.inc
 
 
 ifeq ($(OS),Cygwin)
+ifeq ($(DEBUG),1)
+SUFFIX=d
+_SUFFIX=_d
+else
+SUFFIX=
+_SUFFIX=
+endif
 PREFIX_PYTHON=$(PREFIX)/bin
 PREFIX_DB=$(BUILD_ROOT)/persistence/db/db-4.2.52
 MANIFEST=$(SNAP)/$(SITE)/PyLucene.py \
          $(SNAP)/$(SITE)/_PyLucene$(_SUFFIX).pyd \
-         $(SRC)/$(SNAP)/libdb_java42$(SUFFIX).dll
+         $(SNAP)/bin/libdb_java42$(SUFFIX).dll
 else
 
 ifeq ($(OS),Darwin)
