bug 1707; new version of twisted for smtp, add required ZopeInterface module;
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3036 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/zope/Makefile
+++ b/external/zope/Makefile
@@ -7,9 +7,12 @@ include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
-build: 
+apply: patches-$(VERSION)
+    patch -Nup0 < patches-$(VERSION);echo ok
+
+build: apply
 	cd $(SRC); \
-	$(PYTHON) setup.py build --build-base=$(BUILD) \
+	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
 
 expand: ZopeInterface-$(VERSION).tgz
