Twisted+M2Crypto integration. Simple SSL client should work (server does not work), as well as reading email over IMAP (SSL). Do 'make applym2' and rebuild to test.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3048 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -7,6 +7,11 @@ include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
+# Temporary, use to test Twisted with M2Crypto
+applym2:
+	cd $(SRC); \
+	patch -p0<../m2-patches
+
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
 
