Bug 1735;apply m2 patch to twisted;r=heikki
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3096 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -7,15 +7,15 @@ include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
-# Temporary, use to test Twisted with M2Crypto
 applym2:
+	rm -f $(SRC)/twisted/internet/m2ssl.py ; \
 	cd $(SRC); \
 	patch -p0<../m2-patches
 
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
 
-build: apply
+build: apply applym2
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
@@ -23,23 +23,10 @@ build: apply
 expand: Twisted-$(VERSION).tar.gz
 	tar xvzf Twisted-$(VERSION).tar.gz
 
-ifeq ($(OS),Cygwin)
-
-snap: 
-	cd $(BUILD_ROOT); \
-	tar -cvzf $(TWISTED)/$(SNAP).tar.gz \
-			  $(SNAP)/$(SITE)/twisted \
-			  $(SNAP)/bin/Scripts
-
-else
-
-
 snap: 
 	cd $(BUILD_ROOT); \
 	tar -cvzf $(TWISTED)/$(SNAP).tar.gz \
 			  $(SNAP)/$(SITE)/twisted 
-
-endif
 
 clean:
 	rm -rf  $(SRC)/$(BUILD)
