--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -3,10 +3,11 @@
 # It should *not* be made to depend on external/internal
 # When a version changes, the ARCHIVES list below needs to be updated.
 #
-ARCHIVES=../$(SNAP)-0.3-12.tar.gz \
+ARCHIVES=../$(SNAP)-0.3-13.tar.gz \
          ../wxPython-$(SNAP)-2.5-4.tar.gz \
          ../UUIDext-$(SNAP)-0.3-2.tar.gz \
          ../m2crypto-$(SNAP)-0.12-1.tar.gz \
+         ../QueryParser-$(SNAP)-0.1-1.tar.gz \
          ../Launchers-$(SNAP)-0.3-4.tar.gz
 
 OS=$(shell uname)
@@ -27,11 +28,15 @@ endif
 
 ifeq ($(OS),Darwin)
 PLATFORM=macosx
+FRAMEWORK=Library/Frameworks/Python.framework/Versions/2.3
+SITE=$(FRAMEWORK)/lib/python2.3/site-packages
 else
 ifeq ($(OS),Cygwin)
 PLATFORM=windows
+SITE=bin/Lib/site-packages
 else
 PLATFORM=linux
+SITE=lib/python2.3/site-packages
 endif
 endif
 
@@ -57,6 +62,7 @@ checkout:
 	echo 'Do |grep "^C " ../cvsco.log| to check for potential conflicts'
 
 install: $(ARCHIVES) $(notdir $(ARCHIVES))
+	cp $(SNAP)/$(SITE)/QueryParser.py repository/query/parser/
 
 clean:
 	rm -rf $(SNAP); \
