Bug 1711;enable queryparser in internal;r=twl
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3099 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/Makefile
+++ b/internal/Makefile
@@ -4,7 +4,8 @@ include Makefile.inc
 SYSTEMS=UUIDext \
         wxPython-2.5 \
         m2crypto \
-        launchers
+        launchers \
+        queryparser
 
 .PHONY: binaries $(SYSTEMS)
 
