Corrected dependency error for expand
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3102 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/yapps/Makefile
+++ b/external/yapps/Makefile
@@ -11,7 +11,7 @@ build:
 	cd $(SRC); \
 	cp yapps2.py yappsrt.py grammar.py parsetree.py $(BUILD_ROOT)/$(SNAP)/$(SITE)/
 
-expand: yapps-$(VERSION).zip
+expand: 
 	unzip -o yapps$(VERSION).zip
 
 snap: 
