Bug 1475;Apply Robin's patches to swig
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3119 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/swig/Makefile
+++ b/external/swig/Makefile
@@ -50,7 +50,7 @@ else
 
 EXECUTABLE=
 
-$(SRC)/$(BUILD)/Makefile: apply
+$(SRC)/$(BUILD)/Makefile: expand apply
 	cd $(SRC); \
 	mkdir -p $(BUILD); \
 	cd $(BUILD); \
@@ -81,8 +81,8 @@ snap:
 clean:
 	cd $(SRC); rm -rf $(BUILD)
 
-expand: swig-$(VERSION).tar.gz 
-	tar xvzf swig-$(VERSION).tar.gz
+expand: SWIG-$(VERSION).tar.gz 
+	tar xvzf SWIG-$(VERSION).tar.gz
 
 build: swig
 
