When applying the patch for the second time it fails, which we should just ignore and continue with the build.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3133 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/swig/Makefile
+++ b/external/swig/Makefile
@@ -72,7 +72,7 @@ swig:   $(SRC)/$(BUILD)/Makefile
 endif
 
 apply: patches-$(VERSION)
-	patch -Nup0 < patches-$(VERSION)
+	patch -Nup0 < patches-$(VERSION); echo ok
 
 # snap target can be empty since we don't actually need swig when
 # running Chandler
