--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -1,5 +1,5 @@
 
-VERSION=r11245
+VERSION=r11303
 TWISTED=$(BUILD_ROOT)/twisted
 SRC=$(TWISTED)/Twisted-$(VERSION)
 
@@ -10,7 +10,7 @@ BUILD=build_$(SNAP)
 applym2:
 	rm -f $(SRC)/twisted/internet/m2ssl.py ; \
 	cd $(SRC); \
-	patch -p0<../m2-patches
+	patch -p0<../m2-patches;echo ok
 
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
