--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -7,7 +7,7 @@ ARCHIVES=../$(SNAP)-0.3-14.tar.gz \
          ../wxPython-$(SNAP)-2.5-4.tar.gz \
          ../UUIDext-$(SNAP)-0.3-2.tar.gz \
          ../m2crypto-$(SNAP)-0.12-1.tar.gz \
-         ../QueryParser-$(SNAP)-0.1.2.tar.gz \
+         ../QueryParser-$(SNAP)-0.1-2.tar.gz \
          ../Launchers-$(SNAP)-0.3-4.tar.gz
 
 OS=$(shell uname)
