removed xcludes files and replaced them with --exclude parameters
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3189 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/epydoc/Makefile
+++ b/external/epydoc/Makefile
@@ -24,8 +24,8 @@ expand: epydoc-$(VERSION).tar.gz
 
 snap: 
 	cd $(BUILD_ROOT); \
-        tar -cvzf $(EPYDOC)/$(SNAP).tar.gz \
-                  $(SNAP)/$(SITE)/epydoc
+        tar -cvzf $(EPYDOC)/$(SNAP).tar.gz $(SNAP)/$(SITE)/epydoc \
+            --exclude test
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
