don't break on applym2 if patches were already applied
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3201 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -10,7 +10,7 @@ BUILD=build_$(SNAP)
 applym2:
 	rm -f $(SRC)/twisted/internet/m2ssl.py ; \
 	cd $(SRC); \
-	patch -p0<../m2-patches;echo ok
+	patch -Nup0<../m2-patches;echo ok
 
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
