Make clean work without warnings even when you haven't yet built.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3204 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -146,6 +146,6 @@ apply: $(SRC)/$(BUILD)/Makefile patches
 	patch -Nup0 < patches; echo ok
 
 clean:
-	cd $(SRC); rm -rf $(BUILD)
+	rm -rf $(SRC)/$(BUILD)
 
 endif
