Path on Windows typically has spaces in it, so quote it. On my Windows box configure can't figure out the build type, so hardcoding it to i386-pc-cygwin.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3225 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/swig/Makefile
+++ b/external/swig/Makefile
@@ -27,12 +27,13 @@ ifeq ($(OS),Cygwin)
 $(SRC)/$(BUILD)/Makefile:
 	mkdir -p $(SRC)/$(BUILD); \
 	cd $(SRC)/$(BUILD); \
-	PATH=$(GCJ_HOME)/bin:$(PATH); \
+	PATH="$(GCJ_HOME)/bin:$(PATH)"; \
 	../configure --prefix=`cygpath -am $(PREFIX)` $(CONF_OPT) \
-                     --with-python=`cygpath -am $(PYTHON)`
+                     --with-python=`cygpath -am $(PYTHON)` \
+                     --build=i386-pc-cygwin
 
 swig: $(SRC)/$(BUILD)/Makefile
-	PATH=$(GCJ_HOME)/bin:$(PATH); $(MAKE) -C $(SRC)/$(BUILD)
+	PATH="$(GCJ_HOME)/bin:$(PATH)"; $(MAKE) -C $(SRC)/$(BUILD)
 	$(MAKE) -C $(SRC)/$(BUILD) install
 
 else
