Apply Brian's smtp changes in our tree until they get integrated into Twisted proper.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3227 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -7,6 +7,11 @@ include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
+# Temporary until integrated into Twisted
+applysmtp:
+	patch $(SRC)/twisted/mail/smtp.py smtp-patches; echo ok
+
+# Temporary until refactored and integrated into Twisted
 applym2:
 	rm -f $(SRC)/twisted/internet/m2ssl.py ; \
 	cd $(SRC); \
@@ -15,7 +20,7 @@ applym2:
 apply: patches-$(VERSION)
 	patch -Nup0 < patches-$(VERSION);echo ok
 
-build: apply applym2
+build: apply applym2 applysmtp
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
