- added type check to Cloud endpoint evaluation code    - reworked //userdata/contentitems creation code    - added two containers for mail parcel as version conflict workaround
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3237 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -64,7 +64,5 @@ checkout:
 install: $(ARCHIVES) $(notdir $(ARCHIVES))
 
 clean:
-	rm -rf $(SNAP); \
-	rm -f chandler.log; \
-	rm -rf __repository__ ; \
-	rm -f randpool.dat
+	rm -rf $(SNAP) __repository__
+	rm -f chandler.log randpool.dat
