OS X now downloading gcc 3.4.1 from downloads.osafoundation.org if needed
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3238 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -143,15 +143,15 @@ endif
 
 ifeq ($(OS),Darwin)
 
-compiler=$(BUILD_ROOT)/gcc-3.4
+compiler=$(BUILD_ROOT)/gcc-3.4.1
 
-$(compiler): $(BUILD_ROOT)/gcc-3.4-20040407.tar.bz2
+$(compiler): $(BUILD_ROOT)/gcc-3.4.1.tar.bz2
 	cd $(BUILD_ROOT); \
-	bunzip2 -c gcc-3.4-20040407.tar.bz2 | tar -xvf -
+	bunzip2 -c gcc-3.4.1.tar.bz2 | tar -xvf -
 
-$(BUILD_ROOT)/gcc-3.4-20040407.tar.bz2:
+$(BUILD_ROOT)/gcc-3.4.1.tar.bz2:
 	cd $(BUILD_ROOT); \
-	curl -O $(COMPILERS)/osx/gcc-3.4-20040407.tar.bz2
+	curl -O $(COMPILERS)/osx/gcc-3.4.1.tar.bz2
 
 endif
 
