--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -137,4 +137,4 @@ snap:
 
 install:
 	cd $(BUILD_ROOT); \
-	tar -cf - $(MANIFEST) | tar -C $(BUILD_ROOT)/../chandler -xvf -
+	tar -cf - $(MANIFEST) | tar -C $(CHANDLERBIN) -xvf -
