Add realclean target that cleans downloaded binaries and debug/release directories.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3287 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/Makefile
+++ b/chandler/Makefile
@@ -84,3 +84,8 @@ install: $(ARCHIVES) $(notdir $(ARCHIVES))
 clean:
 	rm -rf $(CHANDLERBIN)/$(SNAP) __repository__
 	rm -f chandler.log randpool.dat
+
+realclean: clean
+	rm -f $(ARCHIVES)
+	rm -fr $(CHANDLERBIN)/debug $(CHANDLERBIN)/release
+
