Original patch (format) from Brian was not safe - when applied more than once it corrupted the file being patched.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3317 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/twisted/Makefile
+++ b/external/twisted/Makefile
@@ -9,7 +9,7 @@ BUILD=build_$(SNAP)
 
 # Temporary until integrated into Twisted
 applysmtp:
-	patch $(SRC)/twisted/mail/smtp.py smtp-patches; echo ok
+	patch -Nup0 < smtp-patches; echo ok
 
 # Temporary until refactored and integrated into Twisted
 applym2:
