Make realclean delete all downloaded sources to force a redownload (in case corrupted/bad sources). Also delete all binaries tarballs we've made.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3324 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -89,7 +89,9 @@ clean: env
 	done
 
 realclean:
-	rm -rf release debug sources-$(VERSION)-expanded
+	rm -rf release debug \
+		release-*.tar.gz debug-*.tar.gz \
+		sources-*.tar sources-*-expanded
 	@for system in $(SYSTEMS); \
 	do \
 	    echo making _realclean in $$system; \
