Fixed clean target.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3325 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/internal/launchers/win/Makefile
+++ b/internal/launchers/win/Makefile
@@ -33,7 +33,8 @@ winlaunch_bin/chandler.exe: winlaunch_bin/winlaunch_bin.cpp
 	cp $(DLLS) $(BUILD_ROOT)/$(SNAP)/bin
 
 clean:
-	rm $@ 
+	devenv.com winlaunch/winlaunch.sln /clean $(SNAP)
+	devenv.com winlaunch_bin/winlaunch_bin.sln /clean $(SNAP)
 
 endif
 
