Fixed default GCJ_HOME path on Mac.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3341 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile.inc
+++ b/external/Makefile.inc
@@ -49,7 +49,7 @@ ifeq ($(OS),Cygwin)
 GCJ_HOME=$(compiler)
 endif
 ifeq ($(OS),Darwin)
-GCJ_HOME=$(compiler)/install
+GCJ_HOME=$(compiler)
 endif
 ifeq ($(OS),Linux)
 GCJ_HOME=/usr
